--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 					<ul class="navbar-nav ml-auto">
 						
 						<li class="nav-item">
-							<a class="nav-link" href="#">Join Us</a>
+							<a class="nav-link" href="index.html#social">Join Us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Death Alert</a>
+							<a class="nav-link" href="index.html#death">Death Alert</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contact</a>
+							<a class="nav-link" href="index.html#portfolio">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -304,7 +304,7 @@
 
         <!-- Social Member -->
         <section class="page-section" id="contact">
-            <div class="container">
+            <div class="container" id="social">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Social Member</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
@@ -448,7 +448,7 @@
         </section> -->
         <!-- Contact-->
         <section class="page-section" id="contact">
-            <div class="container">
+            <div class="container" id="death">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Death Alert</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
@@ -496,7 +496,7 @@
             </div>
         </footer> -->
         <!-- Footer -->
-<footer class="page-footer font-small indigo">
+<footer class="page-footer font-small indigo" id="foot">
 
     <!-- Footer Links -->
     <div class="container">
