--- a/index.html
+++ b/index.html
@@ -58,8 +58,16 @@
 						<h5 class="animated bounceInRight" style="animation-delay: 1s">Eye Donate</h5>
 						<p class="animated bounceInLeft" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur</p>
-						<p class="animated bounceInRight" style="animation-delay: 3s">
-							<a href="#">More Info</a>
+					</div>
+                </div>
+                <div class="carousel-item">
+					<img src="assets/img/header-bg.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption d-none d-md-block">
+						<h5 class="animated zoomIn" style="animation-delay: 1s">Join Us</h5>
+						<p class="animated fadeInLeft" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+						Praesent commodo cursus magna, vel scelerisque nisl consectetur</p>
+						<p class="animated zoomIn" style="animation-delay: 3s">
+							<a href="index.html#social">More Info</a>
 						</p>
 					</div>
 				</div>
@@ -70,21 +78,11 @@
 						<p class="animated fadeInUp" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur</p>
 						<p class="animated zoomIn" style="animation-delay: 3s">
-							<a href="#">More Info</a>
+							<a href="index.html#death">More Info</a>
 						</p>
 					</div>
 				</div>
-				<div class="carousel-item">
-					<img src="assets/img/header-bg.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5 class="animated zoomIn" style="animation-delay: 1s">Join Us</h5>
-						<p class="animated fadeInLeft" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-						Praesent commodo cursus magna, vel scelerisque nisl consectetur</p>
-						<p class="animated zoomIn" style="animation-delay: 3s">
-							<a href="#">More Info</a>
-						</p>
-					</div>
-				</div>
+				
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -96,32 +94,6 @@
 			</a>
 		</div>
 	</header>
-        <!-- Services-->
-        <!-- <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                </div>
-            </div> -->
-        </section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -320,6 +292,20 @@
                                 <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
                                 <p class="help-block text-danger"></p>
                             </div>
+                            <div class="form-group">
+                                <select id="city" name="City" class="form-control" type="email" placeholder="Your city *" required="required" data-validation-required-message="Please enter your email address.">
+                                    <option value="volvo">Enter City</option>
+                                    <option value="saab">Mumbai</option>
+                                    <option value="fiat">Kolkata</option>
+                                    <option value="audi">Jaipur</option>
+                                  </select>
+                                  <p class="help-block text-danger"></p>
+                            </div>
+                            <!-- <div class="form-group">
+                                <input class="form-control" id="email" type="email" placeholder="Your Photo *" required="required" data-validation-required-message="Please enter your email address." />
+                                <p class="help-block text-danger"></p>
+                            </div> -->
+                            
                             <div class="form-group mb-md-0">
                                 <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
                                 <p class="help-block text-danger"></p>
@@ -333,11 +319,37 @@
                 </form>
             </div>
         </section>
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">About Us</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">E-Commerce</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">Responsive Design</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">Web Security</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    </div>
+                </div>
+            </div> -->
+        <!-- </section>
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">Eye Donation Process</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <ul class="timeline">
