--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<a class="nav-link" href="index.html#death">Death Alert</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index.html#portfolio">Contact</a>
+							<a class="nav-link" href="index.html#death">Contact</a>
 						</li>
 					</ul>
 				</div>
