--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="assets/img/header-bg.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
+					<img src="assets/img/banner1.jpg" class="d-block w-100" alt="...">
+					<!-- <div class="carousel-caption d-none d-md-block">
 						<h5 class="animated bounceInRight" style="animation-delay: 1s">Eye Donate</h5>
 						<p class="animated bounceInLeft" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
 						Praesent commodo cursus magna, vel scelerisque nisl consectetur</p>
-					</div>
+					</div> -->
                 </div>
                 <div class="carousel-item">
-					<img src="assets/img/header-bg.jpg" class="d-block w-100" alt="...">
+					<img src="assets/img/banner2.jpg" class="d-block w-100" alt="...">
 					<div class="carousel-caption d-none d-md-block">
 						<h5 class="animated zoomIn" style="animation-delay: 1s">Join Us</h5>
 						<p class="animated fadeInLeft" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="assets/img/header-bg.jpg" class="d-block w-100" alt="...">
+					<img src="assets/img/banner3.jpg" class="d-block w-100" alt="...">
 					<div class="carousel-caption d-none d-md-block">
 						<h5 class="animated slideInDown" style="animation-delay: 1s">Death Alert</h5>
 						<p class="animated fadeInUp" style="animation-delay: 2s">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
